--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     name="apple-mobile-web-app-status-bar-style"
     content="black-translucent"/>
   <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>-->
+  <link href='http://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" 
       type="image/png" 
