firefox compat, new color, fixed urls

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             will be at RISD talking about his work and stuff. From his twitter
             bio: “I make weird internet stuff. I work at Bocoup on open web technology.
             Latest project: @autovids, a bot that posts music videos made from Vine &amp; CCMixter”
-            More about Darius at <a href="#">@tinysubversions</a> and <a href="#">tinysubversions.com</a>
+            More about Darius at <a href="https://twitter.com/tinysubversions">@tinysubversions</a> and <a href="http://tinysubbversions.com">tinysubversions.com</a>
           </p>
         </li>
       </ul>
