white text on bg color

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     </nav>
 
     <section class="intro">
-      <h3>Code Studio</h3><br>
+      <h1>Code Studio<span class="cursor"></span></h1>
       <p>We teach and study creative computation at RISD.</p>
       <p>Talk to your TA to make a tutoring appointment, or send us an <a href="mailto:a@b.com">email</a>.</p>
 
@@ -103,10 +103,10 @@
           </ul>
           <p>
             Darius Kazemi, known for work like <a href="http://randomshopper.tumblr.com/">Amazon Random Shopper</a>,
-            will be at RISD talking about his work and stuff. From his twitter
+            will be at RISD talking about his work. From his twitter
             bio: “I make weird internet stuff. I work at Bocoup on open web technology.
             Latest project: @autovids, a bot that posts music videos made from Vine &amp; CCMixter”
-            More about Darius at <a href="https://twitter.com/tinysubversions">@tinysubversions</a> and <a href="http://tinysubbversions.com">tinysubversions.com</a>
+            More about Darius at <a href="https://twitter.com/tinysubversions">@tinysubversions</a> and <a href="http://tinysubversions.com">tinysubversions.com</a>
           </p>
         </li>
       </ul>
