various copy tweaks

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
     <section class="intro">
       <h1>Code Studio<span class="cursor"></span></h1>
       <p>We teach and study creative computation at RISD.</p>
-      <p>Talk to your TA to make a tutoring appointment, or send us an <a href="mailto:a@b.com">email</a>.</p>
+      <p>If you're taking a coding class, talk to your TA to make a tutoring appointment.</p>
 
       <ul class="info">
         <li>Design Center 403</li>
@@ -119,7 +119,7 @@
       </p>
       <ul class="people">
         <li data-about="Grad, Graphic Design">
-          <a href="http://www.thisisbrianjames.com/">Brian James</a>
+          Brian James
         </li>
         <li data-about="Grad, Graphic Design">Brienne Jones</li>
         <li data-about="Faculty, Architecture">Carl Lostritto</li>
