Fixes for firefox

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
     <section class="intro">
       <h1>Code Studio<span class="cursor"></span></h1>
-      <p>We teach and study creative computation at RISD.</p>
+      <p>We teach and study creative computation at <a href="http://risd.edu">RISD</a>.</p>
       <p>If you're taking a coding class, talk to your TA to make a tutoring appointment.</p>
 
       <ul class="info">
