dynamically load event from google cal

--- a/index.html
+++ b/index.html
@@ -82,8 +82,9 @@
 
     <section class="intro">
       <h1>Code Studio<span class="cursor"></span></h1>
-      <p>We teach and study creative computation at <a href="http://risd.edu">RISD</a>.</p>
-      <p>If you're taking a coding class, talk to your TA to make a tutoring appointment.</p>
+      <p>We are a group of students and faculty from across departments, and we teach and study creative computation at <a href="http://risd.edu">RISD</a>.</p>
+      <br>
+      <p>We meet every week. If you're taking a coding class, make a tutoring appointment with your TA. Otherwise feel free to drop by and meet some like-minded people.</p>
 
       <ul class="info">
         <li>Design Center 403</li>
@@ -94,10 +95,11 @@
 
     <section class="events">
       <h2>Upcoming Events</h2>
-      <ul>
+      <ul id="gcal-events">
         <li class="event">
-          <h3>Darius Kazemi</h3>
-          <ul class="metadata">
+            <h3>Loading</h3>
+<!--          <h3>Darius Kazemi</h3>
+           <ul class="metadata">
             <li>7pm — Wednesday, November 20th</li>
             <li>CIT 204 (Conference Room)</li>
           </ul>
@@ -108,7 +110,7 @@
             Latest project: @autovids, a bot that posts music videos made from Vine &amp; CCMixter”
             More about Darius at <a href="https://twitter.com/tinysubversions">@tinysubversions</a> and <a href="http://tinysubversions.com">tinysubversions.com</a>
           </p>
-        </li>
+ -->        </li>
       </ul>
     </section>
 
@@ -140,6 +142,7 @@
 
 
   <script type="text/javascript" src="jquery.min.js"></script>
+  <script type="text/javascript" src="moment.js"></script>
   <script type="text/javascript" src="script.js"></script>
 
 </body>
