switched from webkit-columns to old-school div

--- a/index.html
+++ b/index.html
@@ -128,6 +128,8 @@
         <li data-about="Faculty, Graphic Design">Clement Valla</li>
         <li data-about="Undergrad, Graphic Design">Evan Brooks</li>
         <li data-about="Faculty, Digital + Media">Evelyn Eastmond</li>
+      </ul>
+      <ul class="people">
         <li data-about="Grad, Architecture">Guoyuan Chen</li>
         <li data-about="Grad, Graphic Design">Jerel Johnson</li>
         <li data-about="Faculty, Digital + Media">Lauren McCarthy</li>
