--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
   <meta
     name="apple-mobile-web-app-status-bar-style"
     content="black-translucent"/>
-  <!--<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>-->
   <link href='http://fonts.googleapis.com/css?family=Karla:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" 
@@ -84,7 +83,7 @@
       <h1>Code Studio<span class="cursor"></span></h1>
       <p>We are a group of students and faculty from across departments, and we teach and study creative computation at <a href="http://risd.edu">RISD</a>.</p>
       <br>
-      <p>We meet every week. If you're taking a coding class, make a tutoring appointment with your TA. Otherwise feel free to drop by and meet some like-minded people.</p>
+      <p>We meet every week. If you're taking a coding class, make a tutoring appointment with your TA. Otherwise feel free to drop by and meet some like-minded people, no experience needed.</p>
 
       <ul class="info">
         <li>Design Center 403</li>
@@ -98,19 +97,7 @@
       <ul id="gcal-events">
         <li class="event">
             <h3>Loading</h3>
-<!--          <h3>Darius Kazemi</h3>
-           <ul class="metadata">
-            <li>7pm — Wednesday, November 20th</li>
-            <li>CIT 204 (Conference Room)</li>
-          </ul>
-          <p>
-            Darius Kazemi, known for work like <a href="http://randomshopper.tumblr.com/">Amazon Random Shopper</a>,
-            will be at RISD talking about his work. From his twitter
-            bio: “I make weird internet stuff. I work at Bocoup on open web technology.
-            Latest project: @autovids, a bot that posts music videos made from Vine &amp; CCMixter”
-            More about Darius at <a href="https://twitter.com/tinysubversions">@tinysubversions</a> and <a href="http://tinysubversions.com">tinysubversions.com</a>
-          </p>
- -->        </li>
+        </li>
       </ul>
     </section>
 
@@ -143,8 +130,16 @@
 
 
 
-  <script type="text/javascript" src="jquery.min.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="moment.js"></script>
   <script type="text/javascript" src="script.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
+    ga('create', 'UA-45686321-1', 'risd.edu');
+    ga('send', 'pageview');
+  </script>
 </body>
