link to google group before email is set up

--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
       <ul class="info">
         <li>Design Center 403</li>
         <li>Wednesdays 6pm - 9pm</li>
-        <li><a href="mailto:a@b.com">codestudio@risd.edu</a></li>
+        <li><a href="https://groups.google.com/a/risd.edu/forum/#!forum/c-list">Code Studio Google Group</a></li>
+        <!--<li><a href="mailto:codestudio@risd.edu">codestudio@risd.edu</a></li>-->
       </ul>
     </section>
 
