--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-  <title>Yo Dais</title>
+  <title>Code Studio</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta
     name="viewport"
@@ -27,107 +27,120 @@
     <nav>
       <div class="head" id="box1">
         <div class="inner">
-          H
+          C
         </div>
       </div>
       <div class="head" id="box2">
         <div class="inner" data-alt="0">
-          a
+          o
         </div>
       </div>
       <div class="head" id="box3">
         <div class="inner">
-          p
+          d
         </div>
       </div>
       <div class="head" id="box4">
         <div class="inner" data-alt="3">
-          p
+          e
         </div>
       </div>
+
+
       <div class="head" id="box5">
         <div class="inner" data-alt="5">
-          y
+          S
         </div>
       </div>
-
-
       <div class="head" id="box6">
         <div class="inner"  data-alt="7">
-          B
+          t
         </div>
       </div>
       <div class="head" id="box7">
         <div class="inner">
-          i
+          u
         </div>
       </div>
       <div class="head" id="box8">
         <div class="inner">
-          r
+          d
         </div>
       </div>
       <div class="head" id="box9">
         <div class="inner"  data-alt="1">
-          t
+          i
         </div>
       </div>
       <div class="head" id="box10">
         <div class="inner"  data-alt="0">
-          h
-        </div>
-      </div>
-      <div class="head" id="box11">
-        <div class="inner"  data-alt="0">
-          d
-        </div>
-      </div>
-      <div class="head" id="box12">
-        <div class="inner"  data-alt="0">
-          a
-        </div>
-      </div>
-      <div class="head" id="box13">
-        <div class="inner"  data-alt="0">
-          y
-        </div>
-      </div>
-
-
-
-
-      <div class="head" id="box14">
-        <div class="inner"  data-alt="0">
-          D
-        </div>
-      </div>
-      <div class="head" id="box15">
-        <div class="inner"  data-alt="0">
-          a
-        </div>
-      </div>
-      <div class="head" id="box16">
-        <div class="inner"  data-alt="0">
-          i
-        </div>
-      </div>
-      <div class="head" id="box17">
-        <div class="inner"  data-alt="0">
-          s
-        </div>
-      </div>
-      <div class="head" id="box18">
-        <div class="inner"  data-alt="0">
-          y
+          o
         </div>
       </div>
     </nav>
+
+    <section class="intro">
+      <h1>Code Studio<span class="cursor"></span></h1>
+      <p>We are a group of students and faculty from across departments, and we teach and study creative computation at <a href="http://risd.edu">RISD</a>.</p>
+      <br>
+      <p>We meet every week. If you're taking a coding class, make a tutoring appointment with your TA. Otherwise feel free to drop by and meet some like-minded people, no experience needed.</p>
+
+      <ul class="info">
+        <li>Design Center 407</li>
+        <li>Wednesdays 6pm - 9pm</li>
+        <li><a href="https://groups.google.com/a/risd.edu/forum/#!forum/c-list">Code Studio Google Group</a></li>
+        <!--<li><a href="mailto:codestudio@risd.edu">codestudio@risd.edu</a></li>-->
+      </ul>
+    </section>
+
+    <section class="events">
+      <h2>Upcoming Events</h2>
+      <ul id="gcal-events">
+        <li class="event">
+            <h3>Loading</h3>
+        </li>
+      </ul>
+    </section>
+
+    <section class="about">
+      <h2>Who we are</h2>
+      <p>
+        We are RISD faculty, students, and research associates who have an affinity for computation. Right now we consist of:
+      </p>
+      <ul class="people">
+        <li data-about="Grad, Graphic Design">
+          Brian James
+        </li>
+        <li data-about="Grad, Graphic Design">Brienne Jones</li>
+        <li data-about="Faculty, Architecture">Carl Lostritto</li>
+        <li data-about="Faculty, Graphic Design">Clement Valla</li>
+        <li data-about="Undergrad, Graphic Design">Evan Brooks</li>
+        <li data-about="Faculty, Digital + Media">Evelyn Eastmond</li>
+      </ul>
+      <ul class="people">
+        <li data-about="Grad, Architecture">Guoyuan Chen</li>
+        <li data-about="Grad, Graphic Design">Jerel Johnson</li>
+        <li data-about="Faculty, Digital + Media">Lauren McCarthy</li>
+        <li data-about="Grad, Architecture">Linyi Dai</li>
+        <li data-about="Faculty, Foundations">Miriam Cabell</li>
+        <li data-about="Undergrad, Illustration">Nellie Robinson</li> 
+      </ul>
+    </section>
 
   </div>
 
 
 
-  <script type="text/javascript" src="jquery.min.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <script type="text/javascript" src="moment.js"></script>
   <script type="text/javascript" src="script.js"></script>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-45686321-1', 'risd.edu');
+    ga('send', 'pageview');
+  </script>
 </body>
