--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
       <p>We meet every week. If you're taking a coding class, make a tutoring appointment with your TA. Otherwise feel free to drop by and meet some like-minded people, no experience needed.</p>
 
       <ul class="info">
-        <li>Design Center 407</li>
-        <li>Wednesdays 6pm - 9pm</li>
+        <li>RISD CIT 2nd Floor</li>
+        <li>Monday March 3 — 7pm</li>
+        <li>Tuesday March 11 — 7pm</li>
+        <li>Monday March 17 — 7pm</li>
         <li><a href="https://groups.google.com/a/risd.edu/forum/#!forum/c-list">Code Studio Google Group</a></li>
         <!--<li><a href="mailto:codestudio@risd.edu">codestudio@risd.edu</a></li>-->
       </ul>
